# 3DGSim

./: .gitignore  LICENSE  README.md  demo.py  main.py  pyproject.toml  requirements.txt  scene_editing.py
config/: main.yaml
config/dataset/: genesis.yaml  movi.yaml
config/dataset/view_sampler/: arbitrary.yaml  boundedv2.yaml  no_replacement.yaml
config/dataset/view_sampler_dataset_specific_config/: bounded_movi.yaml
config/experiment/: cosmos.yaml  genesis_global.yaml  movi.yaml  mvsplat.yaml  mvsplat_global.yaml
config/model/decoder/: mvsplat.yaml
config/model/dynamic_model/: gaussian_ptv3.yaml
config/model/encoder/: costvolume.yaml
config/model/state_adapter/: default_state_adapter.yaml
src/: config.py
src/dataset/: __init__.py  data_module.py  dataset.py  dataset_genesis.py  dataset_movi.py  types.py
src/dataset/shims/: augmentation_shim.py  crop_shim.py  patch_shim.py
src/dataset/view_sampler/: __init__.py  view_sampler_arbitrary.py  view_sampler_bounded_v2.py  view_sampler_no_replacement.py
src/evaluation/: metrics.py
src/geometry/: projection.py  rotation_conversions.py
src/loss/: __init__.py  loss.py  loss_depth.py  loss_lpips.py  loss_mse.py
src/misc/: LocalLogger.py  benchmarker.py  ema.py  image_io.py  sh_rotation.py
src/model/: model_wrapper.py  state_adapter.py  types.py
src/model/decoder/: __init__.py  cuda_splatting.py  decoder.py  decoder_mvsplat.py  decoder_splatting_cuda.py
src/model/encoder/: __init__.py  (+2 more)
src/serialization/: __init__.py  default.py  hilbert.py  z_order.py
src/visualization/: validation_in_3d.py
(+18 files in other folders)
